#2147: fix findings after review
* javadocs, @Nullable use, appendPayload use of predicate, hashCode/equals/toString, formatting